--- a/index.html
+++ b/index.html
@@ -75,9 +75,7 @@
                   </div>
                 </div>
               </nav>
-              <div id="loadPage" class="page p-4">
-
-              </div>
+              <div id="loadPage" class="page p-4"></div>
         </div>
     </div>
     <script src="./assets/js/loadPage.js"></script>
