--- a/pages/home.html
+++ b/pages/home.html
@@ -6,7 +6,7 @@
             <div class="d-flex align-items-end">
                 <i class="bi bi-people card-icon me-5"></i>
                 <div>
-                    <h2></h2>
+                    <h2 id="students"></h2>
                     <p>Students</p>
                 </div>
             </div>
@@ -19,7 +19,7 @@
             <div class="d-flex align-items-end">
                 <i class="bi bi-mortarboard card-icon teacher-icon me-5"></i>
                 <div>
-                    <h2></h2>
+                    <h2 id="teachers"></h2>
                     <p>Teachers</p>
                 </div>
             </div>
@@ -32,7 +32,7 @@
             <div class="d-flex align-items-end">
                 <i class="bi bi-bank card-icon class-icon  me-5"></i>
                 <div>
-                    <h2></h2>
+                    <h2 id="classes"></h2>
                     <p>Class</p>
                 </div>
             </div>
@@ -45,7 +45,7 @@
             <div class="d-flex align-items-end">
                 <i class="bi bi-book card-icon me-5"></i>
                 <div>
-                    <h2></h2>
+                    <h2 id="batches"></h2>
                     <p>Batchs</p>
                 </div>
             </div>
@@ -53,3 +53,24 @@
         </div>
     </div>
 </div>
+
+<script>
+    let getData = async ()=>{
+      let data =  await $.ajax({
+           url:"./server/application/dashboard/home.php",
+           method:"GET",
+           data:"json"
+       });
+       return data;
+    }
+    getData().then((response)=>{
+        console.log(response)
+        if(response.code == 500){
+            $("#loadPage").load("./pages/500.html");
+        }
+        $("#students").text(response.student);
+        $("#classes").text(response.class);
+        $("#batches").text(response.batch);
+        $("#teachers").text(response.teacher);
+    });
+</script>
