--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     />
     <script src="./assets/js/bootstrap.min.js"></script>
     <script src="./assets/js/jquery.js"></script>
+    <script src="./assets/js/api.js"></script>
 </head>
 <body>
     <div class="main">
@@ -26,7 +27,7 @@
               </div>
             </div>
             <div class="menu">
-              <div data-page="class_list" class="menu-item ms-4 my-2">
+              <div data-page="class_lissdt" class="menu-item ms-4 my-2">
                 <i class="bi bi-bank"></i>
                 <a class="menu-list">Class</a>
               </div>
