--- a/500.html
+++ b/500.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -15,16 +16,20 @@
             height: 100vh;
             margin: 0;
         }
+
         .container {
             text-align: center;
         }
+
         h1 {
             font-size: 6rem;
             margin: 0;
         }
+
         p {
             font-size: 1.5rem;
         }
+
         a {
             display: inline-block;
             margin-top: 20px;
@@ -35,16 +40,19 @@
             border-radius: 5px;
             transition: background-color 0.3s;
         }
+
         a:hover {
             background-color: #0056b3;
         }
     </style>
 </head>
+
 <body>
     <div class="container">
-        <h1>404</h1>
-        <p>Oops! The page you're looking for doesn't exist.</p>
-        <a href="./index.html">Go Back Home</a>
+        <h1>500</h1>
+        <p>Oops! Internal Server Error.</p>
+        <a href="/">Go Back Home</a>
     </div>
 </body>
+
 </html>
