--- a/pages/teacher_list.html
+++ b/pages/teacher_list.html
@@ -1,1 +1,87 @@
-<h3>Teacher List</h3>
+<h2>Teacher List</h2>
+
+
+<div class="card">
+    <div class="card-header d-flex justify-content-end">
+        <a href="./add_teacher.php" class="btn btn-secondary"> Add New Teacher</a>
+    </div>
+    <div class="card-body">
+        <table class="table table-border">
+            <thead>
+                <tr>
+                    <th>NO</th>
+                    <th>Name</th>
+                    <th>Email</th>
+                    <th>EXP</th>
+                    <th>Action</th>
+                </tr>
+            </thead>
+            <tbody id="teacher_list">
+            
+            </tbody>
+        </table>
+    </div>
+</div>
+<!-- Button trigger modal -->
+
+<!-- Modal -->
+<div class="modal fade modal-sm" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+  <div class="modal-dialog">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h1 class="modal-title fs-5" id="exampleModalLabel">Are you sure!</h1>
+        <button type="button" id="close" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+      </div>
+      <div class="modal-body">
+        Do you want to delete this class?
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-danger" id="deleted">Delete</button>
+      </div>
+    </div>
+  </div>
+</div>
+
+<script>
+  
+   add_teacher = (data)=>{
+    let row = $("<tr>");
+    let no = $("<td>");
+    let name = $("<td>");
+    let email = $("<td>");
+    let exp = $("<td>");
+    let action = $("<td>");
+    let del = $("<button>",{class:"btn btn-danger btn-sm"}).attr("data-bs-toggle","modal").attr("data-bs-target","#exampleModal").text("Delete");
+    let edit = $("<button>",{class:"btn btn-primary btn-sm me-2"}).text("Update");
+    row.append(no,name,email,exp,action);
+    action.append(edit,del);
+    no.text(data.no);
+    name.text(data.teacher_name);
+    email.text(data.teacher_email);
+    exp.text(data.exp);
+    $("#teacher_list").append(row);
+
+    del.on("click",()=>{
+      deleteKey = data.teacher_id;
+    })
+  }
+  get_all_teacher = ()=>{
+    $("#teacher_list").html("");
+    sendGetRequest(url+"teacher/get_teacher_list.php").then((response)=>{
+      response.forEach((teacher,idx) => {
+        teacher["no"] = idx + 1;
+        add_teacher(teacher)
+      });
+    });
+  }
+
+  $("#deleted").on("click",()=>{
+    sendDeleteRequest(url + "teacher/delete_teacher.php?id=" + deleteKey).then((response)=>{
+      if(response.code == 200){
+        get_all_teacher();
+      }
+      $("#close").click();
+    })
+  })
+  get_all_teacher();
+</script>
