--- a/index.html
+++ b/index.html
@@ -18,6 +18,8 @@
       let deleteKey = undefined;
       let add_teacher = undefined;
       let get_all_teacher = undefined;
+      let add_edit = false;
+      let temp = undefined;
     </script>
 </head>
 <body>
