--- a/pages/add_teacher.html
+++ b/pages/add_teacher.html
@@ -1,5 +1,5 @@
 
-<h2>Add Teacher</h2>
+<h2 id="title">Add Teacher</h2>
 <div class="card">
     <div class="card-body">
         <div class="card col-md-4">
@@ -29,6 +29,10 @@
 </div>
 
 <script>
+    if(add_edit){
+        $("#title").text("Update Teacher");
+        console.log(temp)
+    }
     $("#teacher_form").on("submit",(e)=>{
         e.preventDefault();
         let teacher_name = $("#teacher_name").val();
