--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
       let get_all_teacher = undefined;
       let add_edit = false;
       let edit_id = undefined;
+      let temp = undefined;
     </script>
 </head>
 <body>
