--- a/pages/batch_list.html
+++ b/pages/batch_list.html
@@ -1,1 +1,59 @@
 <h3>Batch List</h3>
+
+<div class="card">
+    <div class="card-header d-flex justify-content-end">
+        <button id="batch_add" class="btn btn-secondary"> Add New Batch</button>
+    </div>
+    <div class="card-body">
+        <table class="table table-border">
+            <thead>
+              <tr>
+                <th>NO</th>
+                <th>Name</th>
+                <th>Start</th>
+                <th>End</th>
+                <th>Fees</th>
+                <th>Teacher</th>
+                <th>Class</th>
+                <th>Action</th>
+            </tr>
+            </thead>
+            <tbody id="batch_list">
+            
+            </tbody>
+        </table>
+    </div>
+</div>
+<!-- Button trigger modal -->
+
+<!-- Modal -->
+<div class="modal fade modal-sm" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+  <div class="modal-dialog">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h1 class="modal-title fs-5" id="exampleModalLabel">Are you sure!</h1>
+        <button type="button" id="close" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+      </div>
+      <div class="modal-body">
+        Do you want to delete this class?
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-danger" id="deleted">Delete</button>
+      </div>
+    </div>
+  </div>
+</div>
+
+
+<script>
+    $("#batch_add").on("click",()=>{
+    add_edit = false;
+    $("#loadPage").load(`./pages/add_batch.html`, (response, status, xhr) => {
+            if (status === "success") {
+                localStorage.setItem("currentPage", 'add_batch');
+            } else {
+                location.replace("./404.html")
+            }
+        });
+  })
+</script>
